# image-suite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
converter/: README.md
crates/converter/: Cargo.toml
crates/converter/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: main.rs
crates/renamer/: Cargo.toml
crates/renamer/src/: lib.rs
editor/: README.md
renamer/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tools/: remove_bg.py
