[package]
name = "image-renamer"
version = "0.1.0"
description = "Image Renamer Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "image_renamer_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-renamer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
renamer = { path = "../crates/renamer" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
